# agentDeck

./: .gitignore  README.md  config.yaml  opencode.json  start.bat  start.ps1
docker/: .dockerignore  Dockerfile.engine  Dockerfile.mcp  config.docker.yaml  docker-compose.yml
mcp_server/: pyproject.toml
mcp_server/src/mcp_server/: __main__.py  server.py
ppt_render_engine/: config.yaml  pyproject.toml  run.py
ppt_render_engine/src/ppt_render_engine/: log_config.py  logger.py  main.py  temp_util.py
ppt_render_engine/src/ppt_render_engine/api/: agent.py  color_scheme.py  convert.py  design_style.py  image.py  preview.py  sync.py  template_mgmt.py
ppt_render_engine/src/ppt_render_engine/core/: color_scheme.py  design_style.py  pptx_builder.py  pptx_parser.py  template.py
ppt_render_engine/src/ppt_render_engine/engine/: layout_preset.py  render.py  validator.py
ppt_render_engine/src/ppt_render_engine/models/: schema.py
ppt_render_engine/storage/color_schemes/: color_schemes.json
ppt_render_engine/storage/design_styles/: _index.json  自然绿意.md  项目介绍.md
ppt_render_engine/storage/examples/: default.json
ppt_render_engine/storage/templates/: 标准1.pptx  标准2.pptx
ppt_render_engine/web/: convert-pptx.html  index.html
ppt_render_engine/web/config/: index.html
tests/: conftest.py  test_perf.py  test_roundtrip.py
tests/fixtures/: background_color.json  color_scheme_accent.json  color_scheme_dk1.json  empty_text.json  fixed_color.json  formatted_runs.json  full_table.json  image_base64.json  image_path.json  image_url.json  merged_cells.json  simple_text.json  (+3 more)
