[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for PPT Render Engine — model can manage presentations via tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
