[project]
name = "ppt-render-engine"
version = "0.2.0"
description = "PPT Render Engine — JSON↔PPTX 高保真双向转换服务，支持模板预加载"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-pptx>=1.0.2",
    "lxml>=5.3.0",
    "Pillow>=11.0.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppt_render_engine"]
